<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.srimanth.basicphrases.MainActivity">

    <GridLayout
        android:id="@+id/myGridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/goodevening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/b1"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/howareyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/b2"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/b3"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/mynameis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/b4"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/doyouspeakenglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/b5"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/b6"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>

        <Button
            android:id="@+id/ilivein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/b7"
            android:layout_gravity="fill"
            android:background="@drawable/ripple_bg1"
            android:onClick="tappedButton"/>
    </GridLayout>
</android.support.constraint.ConstraintLayout>
